--- a/sass/css/css-estilo.css
+++ b/sass/css/css-estilo.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html, body {
   height: 100%; }
 
@@ -24,99 +23,168 @@ ul {
 a {
   text-decoration: none; }
 
-.header {
-  background-image: linear-gradient(#474747, white);
-  width: 100%;
-  box-shadow: 1px 1px 4px 0 rgba(77, 75, 75, 0.89);
-  z-index: 3; }
+.color-fondo {
+  background-color: #343a40; }
 
-#img-logo {
-  display: flex;
-  padding-bottom: 20px;
-  left: 50%;
-  top: 10px;
-  width: 100%;
-  flex-direction: column;
-  align-items: center; }
+.estilo-btn {
+  width: 41px;
+  height: 25px;
+  padding-left: 0px;
+  padding-bottom: 0px;
+  padding-right: 0px;
+  padding-top: 0px;
+  border-bottom-width: 0px;
+  border-right-width: 0px;
+  border-top-width: 0px;
+  border-left-width: 0px; }
 
-.seccion-link {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 15px;
-  color: #353434;
-  display: block;
-  padding-top: 5px; }
+.header-top {
+  padding-top: 17%; }
 
-.header li a:hover,
-.header .menu-btn:hover {
-  color: #614242;
-  text-decoration: none; }
+#fondoIndex {
+  background: #e8cbc0;
+  background: -webkit-linear-gradient(to right, #ec94de, #b1bcec);
+  background: linear-gradient(to right, #ec94de, #b1bcec);
+  min-height: 100vh; }
 
-.header .logo {
-  display: block;
-  float: left;
-  font-size: 2em;
-  padding: 10px 20px;
-  text-decoration: none; }
+.seccion-index .box3 {
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+  position: relative; }
 
-/* menu */
-.header .menu {
-  clear: both;
-  max-height: 0;
-  transition: max-height .2s ease-out;
-  margin-bottom: 1px; }
-
-/* menu icon */
-.header .menu-icon {
-  cursor: pointer;
-  display: inline-block;
-  padding-top: 10px;
-  padding-left: 10px;
-  position: relative;
-  user-select: none; }
-
-.header .menu-icon .navicon {
-  background: #7c0505;
-  display: block;
-  height: 2px;
-  position: relative;
-  transition: background .2s ease-out;
-  width: 18px; }
-
-.header .menu-icon .navicon:before,
-.header .menu-icon .navicon:after {
-  background: #7c0505;
-  content: '';
-  display: block;
-  height: 100%;
+.seccion-index .box3 .box-content, .seccion-index .box3:after, .seccion-index .box3:before {
   position: absolute;
-  transition: all .2s ease-out;
-  width: 100%; }
+  left: 7%;
+  right: 7%;
+  transition: all .3s; }
 
-.header .menu-icon .navicon:before {
-  top: 5px; }
+.seccion-index .box3:after, .seccion-index .box3:before {
+  display: block;
+  background: rgba(0, 0, 0, 0.3);
+  top: 10%;
+  bottom: 10%;
+  z-index: 1;
+  transform: scale(0, 1); }
 
-.header .menu-icon .navicon:after {
-  top: -5px; }
+.seccion-index .box3:after {
+  top: 10.8%;
+  bottom: 10.8%;
+  transform: scale(1, 0); }
 
-/* menu btn */
-.header .menu-btn {
-  display: none; }
+.seccion-index .box3:hover:after, .seccion-index .box3:hover:before {
+  transform: scale(1);
+  animation: animate 1.5s; }
 
-.header .menu-btn:checked ~ .menu {
-  max-height: 240px; }
+.seccion-index .box3:hover:before {
+  border-top: 3px solid #fff;
+  border-bottom: 3px solid #fff; }
 
-.header .menu-btn:checked ~ .menu-icon .navicon {
-  background: transparent; }
+.seccion-index .box:hover:after {
+  border-left: 3px solid #fff;
+  border-right: 3px solid #fff; }
 
-.header .menu-btn:checked ~ .menu-icon .navicon:before {
-  transform: rotate(-45deg); }
+.seccion-index .box img {
+  width: 100%;
+  height: auto;
+  transition: all .3s; }
 
-.header .menu-btn:checked ~ .menu-icon .navicon:after {
-  transform: rotate(45deg); }
+.seccion-index .box3:hover img {
+  transform: scale(1.2);
+  filter: blur(5px);
+  -moz-filter: blur(5px);
+  -webkit-filter: blur(5px); }
 
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-  top: 0; }
+.seccion-index .box3 .box-content {
+  top: 10%;
+  bottom: 10%;
+  opacity: 0;
+  z-index: 2; }
+
+.seccion-index .box3:hover .box-content {
+  box-shadow: 0 0 0 35px rgba(255, 255, 255, 0.3);
+  opacity: 1;
+  transition: all .3s; }
+
+.seccion-index .box3 .post {
+  display: block;
+  margin: 0 0 5px;
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.8); }
+
+.seccion-index .fuente {
+  font-family: 'Lexend Giga', sans-serif;
+  font-size: 25px; }
+
+.seccion-index .nuestro-espacio .box3 .description {
+  font-size: 14px;
+  color: #464444;
+  margin: 0 0 20px; }
+
+.seccion-index .nuestro-espacio .box3 .title {
+  font-size: 24px;
+  font-weight: 600;
+  color: #7257a5;
+  margin: 0 0 5px; }
+
+.seccion-index .entrenamiento .box3 .title {
+  font-size: 24px;
+  font-weight: 600;
+  color: white;
+  margin: 0 0 5px; }
+
+.seccion-index .entrenamiento .box3 .description {
+  font-size: 14px;
+  color: white;
+  margin: 0 0 20px; }
+
+.seccion-index .box3 .icon {
+  padding: 0;
+  margin: 0;
+  list-style: none; }
+
+.seccion-index .box3 .icon li {
+  display: inline-block;
+  margin: 0 10px 0 0; }
+
+.seccion-index .box3 .icon li a {
+  display: block;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  color: #fff;
+  background: #88c425;
+  transition: all .5s; }
+
+.seccion-index .box3 .icon a:hover {
+  text-decoration: none;
+  animation: animate-hover .5s;
+  transition: all .3s; }
+
+@keyframes animate {
+  0%, 100% {
+    opacity: 1; } }
+
+@keyframes animate-hover {
+  0% {
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.3); }
+  50% {
+    box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.3); }
+  100% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.3); } }
+
+.seccion-index .box10, .seccion-index .box11, .seccion-index .box12, .seccion-index .box14, .seccion-index .box4, .seccion-index .box5, .seccion-index .box6, .seccion-index .box7, .seccion-index .box9 {
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3); }
+
+@media only screen and (max-width: 990px) {
+  .seccion-index .box3 {
+    margin-bottom: 30px; }
+  .seccion-index .box3 .box-content {
+    padding: 10px; }
+  .seccion-index .box3 .description {
+    margin-bottom: 10px; } }
+
+@media only screen and (max-width: 479px) {
+  .seccion-index .box3 .title {
+    margin: 0; } }
 
 .generic-anchor {
   color: #8DB9ED; }
@@ -174,114 +242,89 @@ footer {
 .footer-social-overlap > a:not(:first-child) {
   margin-left: 0.38em; }
 
-.tituloSeccion {
-  font-family: 'Fjalla One', sans-serif;
-  font-size: 30px;
-  color: white;
-  letter-spacing: 2px;
-  padding: 10px 15px 10px 10px; }
-
 #fondoServis {
-  background-color: #1b262c; }
+  background: #e8cbc0;
+  background: -webkit-linear-gradient(to right, #2d336d, #b1bcec);
+  background: linear-gradient(to right, #2d336d, #b1bcec);
+  min-height: 100vh; }
 
-#servis {
-  font-family: 'Fjalla One', sans-serif;
-  font-size: 20px;
-  letter-spacing: 3px;
-  padding: 0px 20px 20px 0px;
-  margin-left: 45px;
-  color: white; }
-
-#divFD {
-  padding: 5px 14px 14px 14px;
-  border: outset 5px #900d0d;
-  font-size: 18px;
-  font-family: 'Kanit', sans-serif;
+.servis {
   color: white;
-  margin-bottom: 5px;
-  grid-area: fd; }
+  font-family: 'Roboto Mono', monospace;
+  font-size: 12px;
+  font-family: 'Lato', sans-serif; }
+  .servis iframe {
+    padding-top: 3px; }
+  .servis a {
+    color: white; }
+  .servis .marg {
+    margin-top: 20%; }
+  .servis .fd {
+    border: outset 5px #900d0d; }
+    .servis .fd img {
+      width: 130px;
+      padding-top: 5px; }
+  .servis .x55 {
+    border: outset 5px #6f4a8e; }
+    .servis .x55 img {
+      width: 70px;
+      padding-top: 5px;
+      padding-bottom: 5px; }
+  .servis .gap {
+    border: outset 5px #206a5d; }
+    .servis .gap h2 {
+      color: #75bf86;
+      margin-bottom: 3px; }
+    .servis .gap p a {
+      margin-top: 60px; }
+  .servis .gap-imag {
+    margin-top: 4px;
+    margin-bottom: 4px; }
+  .servis .funcional {
+    border: outset 5px #900d0d;
+    margin-bottom: 3px;
+    padding-right: 15px;
+    padding-left: 15px; }
+    .servis .funcional h3 {
+      color: #461212;
+      font-size: 20px; }
+  .servis .func-imag {
+    margin-top: 3px; }
+  .servis .consc {
+    border: outset 5px #7fdbda;
+    margin-bottom: 3px;
+    padding-right: 15px;
+    padding-left: 15px; }
+    .servis .consc h3 {
+      color: #40cece; }
+  .servis .cons-imag {
+    margin-top: 5px;
+    margin-bottom: 5px; }
+  .servis .margen-cons {
+    margin-bottom: 4px; }
 
-#divX55 {
-  padding: 5px 14px 14px 14px;
-  border: outset 5px #6f4a8e;
-  font-size: 18px;
-  margin-bottom: 5px;
-  font-family: 'Kanit', sans-serif;
-  color: white;
-  grid-area: x55; }
-
-#video-fd {
-  grid-area: video-fd; }
-
-#video-x55 {
-  grid-area: video-x55; }
-
-#divGap {
-  padding: 5px 14px 14px 14px;
-  margin-bottom: 5px;
-  border: outset 5px #206a5d;
-  font-family: 'Kanit', sans-serif;
-  font-size: 18px;
-  color: white;
-  grid-area: gap; }
-
-#divFuncional {
-  padding: 5px 14px 14px 14px;
-  margin-bottom: 5px;
-  border: outset 5px #fa1616;
-  font-family: 'Kanit', sans-serif;
-  font-size: 18px;
-  color: white;
-  grid-area: funcional; }
-
-#divYoga {
-  padding: 5px 14px 14px 14px;
-  margin-bottom: 5px;
-  border: outset 5px #7fdbda;
-  font-family: 'Kanit', sans-serif;
-  font-size: 18px;
-  color: white;
-  grid-area: yoga; }
-
-.grillaServicios {
-  display: grid;
-  grid-template-areas: "fd video-fd" "x55 video-x55" "gap none" "funcional none" "yoga none";
-  grid-template-columns: 50% auto;
-  grid-template-rows: auto auto auto auto auto;
-  grid-column-gap: 10px;
-  grid-row-gap: 15px; }
-
-#fondoBordó {
-  background-color: #900d0d;
-  padding: 0px 0px 5px 10px; }
-
-#nosotros {
+#fondo {
   background: #e8cbc0;
   background: -webkit-linear-gradient(to right, #e8cbc0, #b1bcec);
   background: linear-gradient(to right, #e8cbc0, #b1bcec);
   min-height: 100vh; }
 
 .how-section1 {
-  margin-top: -15%;
   padding: 10%; }
-
-.how-section1 h4 {
-  color: #4d2892;
-  font-weight: bold;
-  font-size: 30px; }
-
-.how-section1 .subheading {
-  color: #6a2c70;
-  font-size: 20px; }
-
-.how-section1 .row {
-  margin-top: 10%; }
+  .how-section1 .titulo {
+    color: #4d2892;
+    font-weight: bold;
+    font-size: 30px; }
+  .how-section1 .subheading {
+    color: #6a2c70;
+    font-size: 20px; }
+  .how-section1 .row {
+    margin-top: 10%; }
 
 .how-img {
   text-align: center; }
-
-.how-img img {
-  width: 70%; }
+  .how-img img {
+    width: 70%; }
 
 .social-link {
   width: 30px;
@@ -300,33 +343,44 @@ footer {
   text-decoration: none;
   color: #555; }
 
+.galeria {
+  margin-left: 5px;
+  margin-right: 5px; }
+
 @media (min-width: 48em) {
-  .header li {
-    float: left; }
-  .header li a {
-    padding: 10px 20px; }
-  .header li a:hover,
-  .header .menu-btn:hover {
-    color: rgba(54, 52, 52, 0.966);
-    text-decoration: none; }
-  .header .menu {
-    clear: none;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    padding-left: 50%;
-    max-height: none;
-    background-image: white, linear-gradient(#585252);
-    box-shadow: 0px 1px 4px 0 rgba(0, 0, 0, 0.2); }
-  .header .menu-icon {
-    display: none; }
-  .grillaServicios {
-    display: grid;
-    grid-template-areas: "fd video-fd" "x55 video-x55" "gap none" "funcional none" "yoga none";
-    grid-template-columns: 50% auto;
-    grid-template-rows: auto auto auto auto auto;
-    grid-column-gap: 10px;
-    grid-row-gap: 15px; } }
+  .logo-zonafit {
+    width: 250px; }
+  .secciones {
+    padding-right: 10%; }
+  .items li a {
+    font-size: 18px; }
+  .header-top {
+    padding-top: 5%; }
+  .size-letter {
+    font-size: 25px; }
+  .margen {
+    margin-top: 25px; }
+  .seccion-index .forma-padding {
+    margin-bottom: 15px;
+    margin-top: 25px; }
+  .seccion-index .fuente {
+    font-size: 40px; }
+  .servis {
+    font-size: 16px; }
+    .servis .marg {
+      margin-top: 10%; }
+  .x55 {
+    margin-top: 4px; }
+  .gap {
+    margin-top: 4px; }
+  .funcional {
+    margin-top: 4px; }
+    .funcional h3 {
+      font-size: 30px; }
+  .consc {
+    margin-top: 4px; }
+  .how-section1 {
+    padding-top: 0px; } }
 
 @media only screen and (max-width: 768px) {
   .footer-social-connect {
